--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "rewrites": [
       {
         "source": "/",
-        "destination": "/homePage.html"
+        "destination": "/homePage.html",
+        "permanent":true
       }
     ]
   }
