delete some line in vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
     "rewrites": [
       {
         "source": "/",
-        "destination": "/homePage.html",
-        "permanent":true
+        "destination": "/homePage.html"
       }
     ]
   }
